Navbar prototype completed. Added icons

--- a/index.html
+++ b/index.html
@@ -4,18 +4,35 @@
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 
 		<link rel="stylesheet" href="styles/main.css">
+		<link rel="stylesheet" href="styles/navbar.css">
 	</head>
 
 	<body class="dark">
 		<div class="navbar dark">
 			<img class="icon" src="resources/placeholder.png">
 			<ul>
-				<li>Home</li>
+				<li>
+					<a href="/"><img src="resources/home.png"></a>
+				</li>
+				<li>
+					<a href="/search"><img src="resources/search.png"></a>
+				</li>
+				<li>
+					<a href="/notifications"><img src="resources/bell.png"></a>
+				</li>
+				<li>
+					<a href="/dms"><img src="resources/message.png"></a>
+				</li>
+				<li>
+					<a href="/profile"><img src="resources/user.png"></a>
+				</li>
 			</ul>
+			
+			<img class="theme" src="resources/sun.png">
 		</div>
 
 		<div class="content">
-			
+
 		</div>
 	</body>
 </html>
