--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 
 		<link rel="stylesheet" href="styles/main.css">
-		<link rel="stylesheet" href="styles/navbar.css">
-		<link rel="stylesheet" href="styles/content.css">
-		<link rel="stylesheet" href="styles/post.css">
-		<link rel="stylesheet" href="styles/scrollbar.css">
+		<link rel="stylesheet" href="styles/home/navbar.css">
+		<link rel="stylesheet" href="styles/home/content.css">
+		<link rel="stylesheet" href="styles/home/post.css">
+		<link rel="stylesheet" href="styles/home/scrollbar.css">
 
 		<script>
 			function changetheme(button){
