--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 		<title> Login Now </title>
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/logo.css">
-		<link rel="stylesheet" href="styles/login/page.css">
+		<link rel="stylesheet" href="styles/home/register/page.css">
 	</head>
 
 	<body class="dark">
