--- a/index.html
+++ b/index.html
@@ -90,6 +90,30 @@
 						<p>Aliquam convallis dignissim sollicitudin. Donec accumsan elementum diam, eget sagittis diam condimentum sit amet. Vestibulum malesuada posuere eros sed porta. Nullam finibus, erat non luctus vestibulum, lacus leo ornare felis, vel vehicula nisi leo lobortis felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras a ullamcorper dui, vitae pulvinar urna. Proin eget cursus libero. Curabitur egestas tellus turpis, eget scelerisque metus maximus lacinia.</p>
 					</div>
 
+					<div class="social_buttons">
+						<div class="like-dislike">
+							<div class="like">
+								<svg width="100px" height="100px" version="1.1" viewBox="0 0 100 100">
+									<g id="layer1" transform="translate(55 65)">
+										<path id="path2622" d="m25.45-41.897c-8.8052-9.6393-23.081-9.6393-31.887 2e-6l-0.00511 0.0055-0.00511-0.0055c-8.8052-9.6392-23.081-9.6393-31.887 0-8.8052 9.6393-8.8052 25.268 0 34.907l0.0051 0.00546 31.887 34.907 31.887-34.907 5e-3 -0.00546c8.8052-9.6393 8.8052-25.268 1e-6 -34.907z"/>
+									</g>
+								</svg>
+							</div>
+
+							<p class="count">
+								+200
+							</p>
+							
+							<div class="dislike">
+								<svg width="100px" height="100px" version="1.1" viewBox="0 0 100 100">
+									<g id="layer1" transform="translate(160 65)">
+										<path id="rect846" d="m-122.78-51.621c-5.7704-3e-6 -11.541 2.4087-15.943 7.2264-8.8053 9.6352-8.8053 25.257 0 34.892l5e-3 0.0053 31.887 34.892 31.887-34.892 0.0048-0.0053c8.8053-9.6352 8.8053-25.257 0-34.892-6.9312-7.5845-17.251-9.197-25.626-4.841l2.9122 22.877-7.7802-1.0558 4.4557 35.002-15.744-40.725 9.7086 1.3175-6.8862-17.812c-2.8289-1.325-5.8545-1.9887-8.8807-1.9887z"/>
+									</g>
+								</svg>
+							</div>
+						</div>
+					</div>
+
 					<div class="reply_accordion">
 						<button class="accordion_button" type="button">
 							Show replies
@@ -205,5 +229,7 @@
 				});
 			});
 		</script>
+
+		
 	</body>
 </html>
