Works! (not finished)

--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
 						
 						<tr>
 							<td id="div_id_password1" rowspan="2"> 
-								<div class="multiple-inputs" style="margin-top: 2rem;">
+								<div class="multiple-inputs" style="margin-top: 2em;">
 									<input id="id_password1" class="textinput textInput form-control"
 									placeholder="Password" minlength="8"
 									type="password" name="password1" autocomplete="new-password" required>
