--- a/login.html
+++ b/login.html
@@ -37,9 +37,9 @@
 					<button type="submit" class="btn btn-outline-info">Log in now</button>
 				</form>
 
-				<div class="spacer" style="margin-top: 3rem; margin-bottom: 3rem;"></div>
+				<div class="spacer" style="margin-top: 3em; margin-bottom: 3em;"></div>
 
-				<h4 style="margin-bottom: 1rem;"><a href="/auth/password-reset/" style="color: cyan;">Forgot Password?</a></h4>
+				<h4 style="margin-bottom: 1em;"><a href="/auth/password-reset/" style="color: cyan;">Forgot Password?</a></h4>
 
 				<h3>Don`t Have An Account? <a href="/auth/register/" style="color: cyan;">Sign Up!</a></h3>
 
