--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	</head>
 
-	<body id="body" class="dark">
+	<body id="body" class="dark" onload="loadtheme()">
 		<nav id="navbar" class="navbar dark">
 			<ul class="navbar-nav">
 				<li class="nav-item">
